[package]
name = "P2P-Network"
version = "0.0.1"
edition = "2021"
author = "Thomas Mousseau"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
serde = {version = "1.0", features = ["derive"] }
once_cell = "1.5"
pretty_env_logger = "0.4"
log = "0.4"
